--- a/Itsur 2/ITSUR/Modelos/Modelos.csproj
+++ b/Itsur 2/ITSUR/Modelos/Modelos.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{6076BAB1-785E-486F-84B6-0F83277A63E4}</ProjectGuid>
+    <ProjectGuid>{C43A559D-616E-4E79-8B7C-1CEC3376318D}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Datos</RootNamespace>
-    <AssemblyName>Datos</AssemblyName>
+    <RootNamespace>Modelos</RootNamespace>
+    <AssemblyName>Modelos</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <Deterministic>true</Deterministic>
@@ -84,22 +84,13 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Conexion.cs" />
-    <Compile Include="DAOAlumno.cs" />
-    <Compile Include="DAOCarrera.cs" />
-    <Compile Include="DAOGrupo.cs" />
-    <Compile Include="DAOMateria.cs" />
-    <Compile Include="DAOUsuario.cs" />
-    <Compile Include="DuplicadoException.cs" />
-    <Compile Include="FKException.cs" />
+    <Compile Include="Alumno.cs" />
+    <Compile Include="carrera.cs" />
+    <Compile Include="Grupo.cs" />
+    <Compile Include="Inscribir.cs" />
+    <Compile Include="Materia.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="ServerException.cs" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\Modelos\Modelos.csproj">
-      <Project>{c43a559d-616e-4e79-8b7c-1cec3376318d}</Project>
-      <Name>Modelos</Name>
-    </ProjectReference>
+    <Compile Include="Usuario.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
